# byte

./: .gitignore  Cargo.toml  README.md  byte_emu-f9ce7c9a70e85a35.js  byte_emu-f9ce7c9a70e85a35_bg.wasm  index.html
.cargo/: config.toml
.github/workflows/: pages.yml  rust.yml
asm/: Cargo.toml
byte-emu/: Cargo.toml
byte-emu/src/: main.rs
byte_asm/: Cargo.toml
byte_asm/src/: error.rs  lib.rs  main.rs
byte_asm/src/lex/: error.rs  lexer.rs  mod.rs  token.rs
byte_asm/src/lexer/: lexer.rs  mod.rs  token.rs
byte_asm/src/scanner/: cursor.rs  error.rs  mod.rs  scan.rs  scanner.rs  token.rs
byte_common/: Cargo.toml  build.rs
byte_common/src/: lib.rs  opcode_types.rs
byte_core/: Cargo.toml  README.md  build.rs
byte_core/scripts/: instructions.json
byte_core/src/: bus.rs  cpu.rs  lib.rs  opcode.rs
byte_core/tests/: 6502_functional_tests.rs  common.rs  instructions.rs
byte_emu/: Cargo.toml  README.md  index.html
byte_emu/assets/: demo.s  manifest.json  service_worker.js  static.s
byte_emu/src/: app.rs  lib.rs  main.rs
byte_emu/src/app/: app.rs  file_diag.rs  file_processor.rs  frame_history.rs  gui.rs  mod.rs
byte_emu/src/app/ui/: about.rs  byte_console.rs  code_editor.rs  emu_controls.rs  frame_history.rs  memory_monitor.rs  menu_bar.rs  mod.rs
byte_emu/src/emu/: core.rs  mod.rs  ram.rs  rand.rs
docs/: CONSOLE.md
examples/winit-pixels/: Cargo.toml
examples/winit-pixels/src/: main.rs
mos6502/: Cargo.toml
mos6502/scripts/: generate.py
mos6502/src/: bus.rs  cpu.rs  lib.rs  opcode.rs
mos6502/tests/: 6502_functional_tests.rs  instructions.rs
platform/: Cargo.toml
platform/src/: main.rs
scripts/: generate.py  instructions.json
src/: bus.rs  cpu.rs  lib.rs  opcode.rs
tests/: common.rs  instructions.rs  test_opcode_and.rs  test_opcode_asl.rs  test_opcode_bcc.rs  test_opcode_bcs.rs  test_opcode_beq.rs  test_opcode_bmi.rs  test_opcode_bne.rs  test_opcode_bpl.rs  test_opcode_brk.rs  test_opcode_bvc.rs  test_opcode_bvs.rs  test_opcode_dex.rs  test_opcode_inx.rs  test_opcode_lda.rs  test_opcode_nop.rs  test_opcode_tax.rs  test_opcode_tay.rs  test_opcode_txa.rs  test_opcode_tya.rs
