[package]
name = "byte_emu"
version = "0.1.0"
edition = "2021"

[dependencies]
byte_core = { path = "../byte_core" }

egui = "0.21.0"
eframe = { version = "0.21.2", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }

serde = { version = "1.0.152", features = ["derive"] }
getrandom = "0.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3.16"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2.1"
wasm-bindgen-futures = "0.4.34"

[target.'cfg(target_arch = "wasm32")'.dependencies.getrandom]
version = "0.2"
features = ["js"]
