[package]
name = "byte_emu"
version = "0.1.0"
edition = "2021"

[dependencies]
byte_asm = { path = "../byte_asm" }
byte_core = { path = "../byte_core" }
byte_common = { path = "../byte_common" }
vfs = { git = "https://github.com/brkp/rust-vfs.git", features = ["serde"] }

rfd = "0.11.1"
egui = "0.21.0"
eframe = { version = "0.21.2", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "wgpu",          # Use the wgpu rendering backend. Alternative: "glow".
    "persistence",   # Enable restoring app state when restarting the app.
] }

serde = { version = "1.0.152", features = ["derive"] }
tracing = "0.1.37"
bitflags = "1.3.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pollster = "0.3.0"
tracing-subscriber = "0.3.16"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2.1"
wasm-bindgen-futures = "0.4.34"
